Fix dialog box html elements not being aligned to the left in IE8

--- a/aem-webapp/src/main/webapp/resources/css/react/generic-components/default/area.css
+++ b/aem-webapp/src/main/webapp/resources/css/react/generic-components/default/area.css
@@ -4,3 +4,7 @@ div.area-default {
     text-align: left;
     margin: 0 auto;
 }
+
+.textAlignLeft {
+    text-align: left
+}
